--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ CONTACT INFORMATION
 <br>
 </td>
 <td>
-<img src = "IMG_0082-001.JPG" height = 220 width = 300>
+<img src = "SDATTA.jpg" height = 250 width = 250>
 </td>
 </table>
 </center>
