Update index.html; href research.html

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ theory, with special focus on frame theory and signal processing.
 <br>
 &nbsp &nbsp
 <font color = "magenta">
-If you are an undergraduate or a graduate student interested in working with me, you can click <a href = "https://www.webpages.uidaho.edu/sdatta/research.html"> here</a> 
+If you are an undergraduate or a graduate student interested in working with me, you can click <a href = "research.html"> here</a> 
 to learn more, and feel free to email me to discuss opportunities. 
 </font>
 <br>
