--- a/research.html
+++ b/research.html
@@ -22,24 +22,35 @@ on frame theory and signal processing. <a href = Preprints.html> Publications </
 <hr>
 <br>
 <font size = 4> 
-A key idea in harmonic analysis is to decompose a given function into "simpler" components that make it easier to study the properties 
-of the function. When dealing with finite dimensional spaces, most things can be done using linear algebra. In infinite dimensions, 
-one needs tools from functional analysis and things are more subtle. For example, one might have to take into account the various notions of basis and/or deal with issues arising from convergence of infinite sums.    
-Below is a brief description of some of the things I study that might interest students who have taken some undergraduate linear algebra course, and are familiar 
-with the concept of a basis and its fundamental properties. A nominal knowledge of complex numbers is needed. 
+A key idea in harmonic analysis is to decompose a given function into "simpler" components referred to as a representative set. This makes it easier to study the properties 
+of the function through simpler functions and can give a convenient or an efficient representation of the function. In this sense, choosing an appropriate representative set 
+is critical.  
+  
+<ul>
+<li>
+  Finite frames (Applied Linear Algebra): When dealing with finite dimensional spaces, most things can be done using linear algebra. In linear algebra, one of the basic ideas 
+  is to express a given object in some space in terms of elements in a representative set like a basis. When dealing with different kinds of data sets, the structure of this 
+  representative set becomes crucial for efficient storage and transmission of data. Frames are representative sets like bases but are redundant. The redundancy allows more 
+  flexibility and freedom of choice. Frames have now become standard tools in signal processing due to their resilience to noise and transmission losses. 
+  Frames have now become standard tools in signal processing due to their resilience to noise and transmission losses. This may be appropriate for students who have taken 
+  some undergraduate linear algebra, and are familiar with the concept of a basis and its fundamental properties. A nominal knowledge of complex numbers is needed. 
+</li>
 
-<!-- <h3>
-Applied Linear Algbera: Finite Frame Theory
-</h3>
--->
+  <li>
+    General frames: In infinite dimensions, things are more subtle, and one needs some advanced tools such as ideas from analysis. For instance, one might have to take into 
+    account the various notions of basis and/or deal with issues arising from convergence of infinite sums. 
+  </li>
+  <li>
+    Frame design: 
+  </li>
+</ul>  
+    
+
 <br>
 <br>
-Finite Frame Theory (Applied Linear Algebra): In linear algebra, one of the basic ideas is to express a given object in some space in terms of elements in a representative set like a 
-basis. When dealing with different kinds of data sets, the structure of this representative set becomes crucial for efficient storage and 
-transmission of data. Frames are representative sets like bases but are redundant. The redundancy allows more flexibility and freedom of 
-choice. Frames have now become standard tools in signal processing due to their resilience to noise and transmission losses. 
+
 <h4>
-&nbsp Project ideas appropritae for undergraduate students 
+&nbsp Project ideas appropriate for undergraduate students 
 </h4>
 <ul>
 <li>
