--- a/research.html
+++ b/research.html
@@ -34,6 +34,8 @@ is critical.
   flexibility and freedom of choice. Frames have now become standard tools in signal processing due to their resilience to noise and transmission losses. 
   Frames have now become standard tools in signal processing due to their resilience to noise and transmission losses. This may be appropriate for students who have taken 
   some undergraduate linear algebra, and are familiar with the concept of a basis and its fundamental properties. A nominal knowledge of complex numbers is needed. 
+  <br>
+  <a href = "FrameTheoryChapterRevisedFinalMar2017.pdf"> Here</a> is a book chapter on undergraduate research in Finite Frame Theory that appears in <a href = "http://www.springer.com/us/book/9783319660646"> A Primer for Undergraduate Research: From Groups and Tiles to Frames and Vaccines </a> of the series <em> Foundations for Undergraduate Research in Mathematics,</em> Springer, 2017. 
 </li>
 
   <li>
