--- a/research.html
+++ b/research.html
@@ -23,12 +23,12 @@ on frame theory and signal processing. <a href = Preprints.html> Publications </
 <br>
 <font size = 4> 
 A key idea in harmonic analysis is to decompose a given function into "simpler" components referred to as a representative set. This makes it easier to study the properties 
-of the function through simpler functions and can give a convenient or an efficient representation of the function. In this sense, choosing an appropriate representative set 
+of the function through simpler functions and can give an efficient representation of the function. In this sense, choosing an appropriate representative set 
 is critical.  
   
 <ul>
 <li>
-  Finite frames (Applied Linear Algebra): When dealing with finite dimensional spaces, most things can be done using linear algebra. In linear algebra, one of the basic ideas 
+  Finite frames (Applied Linear Algebra): In finite dimensions, most things can be done using linear algebra. A basic idea in linear algebra  
   is to express a given object in some space in terms of elements in a representative set like a basis. When dealing with different kinds of data sets, the structure of this 
   representative set becomes crucial for efficient storage and transmission of data. Frames are representative sets like bases but are redundant. The redundancy allows more 
   flexibility and freedom of choice. Frames have now become standard tools in signal processing due to their resilience to noise and transmission losses. 
