--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@ on frame theory and signal processing. <a href = Preprints.html> Publications </
 <font size = 4> 
 A key idea in harmonic analysis is to decompose a given function into "simpler" components referred to as a representative set. This makes it easier to study the properties 
 of the function through simpler functions and can give an efficient representation of the function. In this sense, choosing an appropriate representative set 
-is critical.  
+is important.  
   
 <ul>
 <li>
