--- a/research.html
+++ b/research.html
@@ -30,8 +30,8 @@ is important.
 <li>
   Finite frames (Applied Linear Algebra): In finite dimensions, most things can be done using linear algebra. A basic idea in linear algebra  
   is to express a given object in some space in terms of elements in a representative set like a basis. When dealing with different kinds of data sets, the structure of this 
-  representative set becomes crucial for efficient storage and transmission of data. Frames are representative sets like bases but are redundant. The redundancy allows more 
-  flexibility and freedom of choice. Frames have now become standard tools in signal processing due to their resilience to noise and transmission losses. This may be appropriate for students who have taken 
+  representative set becomes crucial for efficient storage and transmission. Frames are representative sets like bases but are redundant. The redundancy allows more 
+  flexibility and freedom of choice. Frames have now become standard tools in signal processing due to their resilience to noise and transmission losses. This topic may be appropriate for students who have taken 
   some undergraduate linear algebra, and are familiar with the concept of a basis and its fundamental properties. A nominal knowledge of complex numbers is needed. 
   <br>
   <br>
