--- a/research.html
+++ b/research.html
@@ -49,7 +49,9 @@ is important.
   <li>
     Frame design: In some situations, one might seek a "sparse" representation of a signal. In other situations, one might have to use a 
 subset of a frame to approximate a signal or to deal with loss. Given the goal, properties like "equiangularity", "equal-norm", or 
-"tightness" might be desirable. Consequently, one wishes to construct frames having some "desirable" properties. When working with infinite dimemsional function spaces, generalizing some concepts such as equiangularity becomes tricky, but one might seek frames with a specific structure such as a Gabor structure or a wavelet structure or even frames coming from sets of orthogonal polynomials. Such studies involve concepts from real and functional analysis. Another interesting study is that of frames or frame properties of sets that come from the
+"tightness" might be desirable. Consequently, one wishes to design frames having some "desirable" properties. When working with infinite dimemsional function spaces, 
+    generalizing some concepts such as equiangularity becomes tricky, but one might seek frames with a specific structure such as a Gabor structure or a wavelet structure. 
+    Such studies involve concepts from real, complex, and functional analysis. Another interesting study is that of frames or frame properties of sets that come from the
 action of elements of a group on a single vector. If you are a graduate student interested in working in the area of applied harmonic analysis or frame theory feel free to send me an email. 
   </li>
 </ul>  
