--- a/research.html
+++ b/research.html
@@ -52,9 +52,11 @@ subset of a frame to approximate a signal or to deal with loss. Given the goal, 
 "tightness" might be desirable. Consequently, one wishes to design frames having some "desirable" properties. When working with infinite dimemsional function spaces, 
     generalizing some concepts such as equiangularity becomes tricky, but one might seek frames with a specific structure such as a Gabor structure or a wavelet structure. 
     Such studies involve concepts from real, complex, and functional analysis. Another interesting study is that of frames or frame properties of sets that come from the
-action of elements of a group on a single vector. If you are a graduate student interested in working in the area of applied harmonic analysis or frame theory feel free to send me an email. 
+action of elements of a group on a single vector. 
   </li>
 </ul>  
+Frame theory is a very active area of research that is interdisciplinary. If you are a graduate student interested in working in this area 
+feel free to contact me. 
 </font>
 
 <!--
