--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@ is important.
 </li>
 
   <li>
-    General frames: In infinite dimensions, things are more subtle, and one needs some advanced tools such as ideas from analysis. For instance, one might have to take into 
+    General frames: In infinite dimensions, things are more subtle, and one needs advanced tools from analysis. For instance, one might have to take into 
     account the various notions of basis and/or deal with issues arising from convergence of infinite sums. 
     <br>
     <br>
@@ -51,8 +51,7 @@ is important.
 subset of a frame to approximate a signal or to deal with loss. Given the goal, properties like "equiangularity", "equal-norm", or 
 "tightness" might be desirable. Consequently, one wishes to design frames having some "desirable" properties. When working with infinite dimemsional function spaces, 
     generalizing some concepts such as equiangularity becomes tricky, but one might seek frames with a specific structure such as a Gabor structure or a wavelet structure. 
-    Such studies involve concepts from real, complex, and functional analysis. Another interesting study is that of frames or frame properties of sets that come from the
-action of elements of a group on a single vector. 
+    Such studies involve concepts from real, complex, and functional analysis. 
   </li>
 </ul>  
 Frame theory is a very active area of research that is interdisciplinary. If you are a graduate student interested in working in this area 
