--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@ subset of a frame to approximate a signal or to deal with loss. Given the goal, 
     Such studies involve concepts from real, complex, and functional analysis. 
   </li>
 </ul>  
-Frame theory is a very active area of research that is interdisciplinary. If you are a graduate student interested in working in this area 
+Frame theory is a very active area of research that is interdisciplinary. If you are a Ph.D. student interested in working in this area 
 feel free to contact me. 
 </font>
 
