--- a/research.html
+++ b/research.html
@@ -48,7 +48,7 @@ is important.
   </li>
   <li>
     Frame design: A lot of my researcch involves frame design issues. In some situations, one might seek a "sparse" representation of a signal. In other situations, one might have to use a 
-subset of a frame to approximate a signal or to deal with loss. Given the goal, properties like "equiangularity", "equal-norm", or 
+subset of a frame to deal with transmission loss. Given the goal, properties like "equiangularity", "equal-norm", or 
 "tightness" might be desirable. Consequently, one wishes to design frames having some "desirable" properties. When working with infinite dimemsional function spaces, 
     generalizing some concepts such as equiangularity becomes tricky, but one might seek frames with a specific structure such as a Gabor structure or a wavelet structure. 
     Such studies involve concepts from real, complex, and functional analysis. 
