--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@ ACADEMIC POSITIONS<br>
 RESEARCH INTERESTS 
 <br> 
 &nbsp &nbsp Applied harmonic analysis, applied linear algebra, and approximation 
-theory, with special focus on frame theory and signal processing. 
+theory, with focus on frame theory and signal processing. 
 <br>
 &nbsp &nbsp <a href = Preprints.html> Publications </a> 
 <br>
 &nbsp &nbsp
 <font color = "magenta">
-If you are an undergraduate or a graduate student interested in working with me, you can click <a href = "research.html"> here</a> 
-to learn more, and feel free to email me to discuss opportunities. 
+If you are a student interested in working with me, feel free to email me to discuss opportunities. Click <a href = "research.html"> here</a> 
+to learn more. 
 </font>
 <br>
 <br>
@@ -105,17 +105,17 @@ to learn more, and feel free to email me to discuss opportunities.
 
 <br>
 
-TEACHING 
+TEACHING (FALL 2025)
 <br> 
-<!-- &nbsp &nbsp &nbsp &nbsp Math420 (Complex Variables)
+&nbsp &nbsp &nbsp &nbsp Math5390 (Theory of Ordinary Differential Equationa)
 <br>
-&nbsp &nbsp &nbsp &nbsp Math572 (Functional Analysis II)
+&nbsp &nbsp &nbsp &nbsp Math5710 (Functional Analysis I)
 <br>
+  <!--
 &nbsp &nbsp <a href = TeachingList.html> Courses taught in past semesters </a> 
 <br>
 &nbsp &nbsp <a href = EOCourses.html> Engineering Outreach </a>
 -->
-On sabbatical leave during academic year 2024 - 2025
 <br>
 <br>
 <hr>
@@ -125,6 +125,7 @@ EDITORIAL
 <BR>
 &nbsp &nbsp 2022 - present: Associate Editor for <a href = https://kmj.knu.ac.kr/about/aims_and_scope.php > Kyungpook Mathmematical Journal </a>
 <br>
+<!--
 <br>
 <hr>
 <br>
@@ -132,7 +133,7 @@ SEMINARS
 <br>
 &nbsp &nbsp <a href = https://www.math.colostate.edu/~king/codex/ > CodEx Seminar </a> Tuesdays @ 10 AM Pacific time
 <br>
-<!-- &nbsp &nbsp <a href = ZoomPartyVideos.html> Zoom Watch Party </a> -->
+&nbsp &nbsp <a href = ZoomPartyVideos.html> Zoom Watch Party </a> -->
 <!-- &nbsp &nbsp <a href = http://www.webpages.uidaho.edu/~barannyk/Seminars/ColloquiumUI.html> Mathematics Colloquium </a>
 --> 
 <br>
