--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@ ACADEMIC POSITIONS<br>
 
 <br>
 
-RESEARCH INTERESTS 
+RESEARCH AREA
 <br> 
-&nbsp &nbsp Applied harmonic analysis, applied linear algebra, and approximation 
-theory, with focus on frame theory and signal processing. 
+&nbsp &nbsp Applied harmonic analysis with focus on frame theory and signal processing. 
 <br>
 &nbsp &nbsp <a href = Preprints.html> Publications </a> 
 <br>
