--- a/research.html
+++ b/research.html
@@ -13,7 +13,7 @@ Research
 <br>
 <font size = 5> 
 
-My research interests lie in the areas of applied harmonic analysis, applied linear algebra, and approximation theory, with special focus
+My research interests lie in the areas of applied harmonic analysis, applied linear algebra, and approximation theory, with focus
 on frame theory and signal processing. <a href = Preprints.html> Publications </a>
 
 </font>
