--- a/Preprints.html
+++ b/Preprints.html
@@ -19,6 +19,11 @@ Publications
 
 <ul>
 
+<li> S. Datta and K. B. Datta, <a href = "JMAAZernikeWaveletsFinalPrint.pdf"><i> Wavelets for L2(B(0,1))using Zernike polynomials </i></a>, <a href = "http://www.ujaen.es/revista/jja/volumes-papers-0012-01.php">JAEN Journal of Approximation</a>, Vol. 12, pp. 111 - 154, 2021.
+
+</br>
+</br>
+
 <li> S. Datta, <i> Welch bound equality sets with few distinct inner products from Delsarte-Goethals sets</i>, <a href = "https://www.springer.com/journal/12095/"> Cryptography and Communications</a>, 2023.   
 
 </br>
