--- a/Preprints.html
+++ b/Preprints.html
@@ -19,7 +19,7 @@ Publications
 
 <ul>
 
-<li> S. Datta and K. B. Datta, <a href = "JMAAZernikeWaveletsFinalPrint.pdf"><i> Wavelets for L2(B(0,1))using Zernike polynomials </i></a>, <a href = "http://www.ujaen.es/revista/jja/volumes-papers-0012-01.php">JAEN Journal of Approximation</a>, Vol. 12, pp. 111 - 154, 2021.
+<li> S. Datta and K. B. Datta, <a href = "JMAAZernikeWaveletsFinalPrint.pdf"><i> Wavelets for L2(B(0,1))using Zernike polynomials </i></a>, <a href = "https://www.sciencedirect.com/science/article/abs/pii/S0022247X25006729">Journal of Mathematical Analysis and Applications </a>, Vol. 12, pp. 111 - 154, 2021.
 
 </br>
 </br>
