--- a/Preprints.html
+++ b/Preprints.html
@@ -24,7 +24,7 @@ Publications
 </br>
 </br>
 
-<li> S. Datta, <i> Welch bound equality sets with few distinct inner products from Delsarte-Goethals sets</i>, <a href = "https://www.springer.com/journal/12095/"> Cryptography and Communications</a>, 2023.   
+<li> S. Datta, <a href = "HigherWelchMultiangFramesRMCodesRevised.pdf"><i> Welch bound equality sets with few distinct inner products from Delsarte-Goethals sets</i></a>, <a href = "https://www.springer.com/journal/12095/"> Cryptography and Communications</a>, 2023.   
 
 </br>
 </br>
