--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Somantika Datta
 
 <table border = 1 width = 50% cellspacing = 1 cellpadding = 30>
 <td>
+  <font size = 5>
 CONTACT INFORMATION 
 <br>
 
@@ -34,6 +35,7 @@ CONTACT INFORMATION
 &nbsp &nbsp Office: 320 Brink Hall 
 <br>
 &nbsp &nbsp Fax: 208-885-5843
+  </font>
 <br>
 </td>
 <td>
