--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Somantika Datta, University of Idaho
 
 <body bgcolor=white text=black link=blue vlink= limegreen>
 <center>
-<font size = 4>
+<!-- <font size = 4> -->
 <h2>
 
 Somantika Datta 
