--- a/Preprints.html
+++ b/Preprints.html
@@ -54,7 +54,7 @@ Publications
  
 </br>
 </br>
-<li> S. Datta and J. Oldroyd, <i> Finite Frame Theory,</i> Chapter 6 (pp. 145 - 170) in the volume <a href = "http://www.springer.com/us/book/9783319660646"> A Primer for Undergraduate Research: From Groups and Tiles to Frames and Vaccines </a> of the series <em> Foundations for Undergraduate Research in Mathematics,</em> Springer, 2017. 
+<li> S. Datta and J. Oldroyd,<a href = "FrameTheoryChapterRevisedFinalMar2017.pdf"> <i> Finite Frame Theory,</i> </a> Chapter 6 (pp. 145 - 170) in the volume <a href = "http://www.springer.com/us/book/9783319660646"> A Primer for Undergraduate Research: From Groups and Tiles to Frames and Vaccines </a> of the series <em> Foundations for Undergraduate Research in Mathematics,</em> Springer, 2017. 
 </br>
 </br>
 <li> S. Datta and J. Oldroyd, <a href = "ArXiv-kDistanceTightFramesNFAO.pdf"> <i> Construction of k-angle tight frames </i> </a>, <a href = "http://www.tandfonline.com/doi/full/10.1080/01630563.2016.1176580"> Numerical Functional Analysis and Optimization </a>, Vol. 37, Issue 8, pp. 975 - 989, 2016. 
