--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@ to learn more.
 
 <br>
 
-TEACHING (FALL 2025)
+TEACHING (SPRING 2026)
 <br> 
-&nbsp &nbsp &nbsp &nbsp Math5390 (Theory of Ordinary Differential Equationa)
+&nbsp &nbsp &nbsp &nbsp Math5370 (Fourier Analysis)
 <br>
-&nbsp &nbsp &nbsp &nbsp Math5710 (Functional Analysis I)
+&nbsp &nbsp &nbsp &nbsp Math2750 (Calculus III)
 
 <!--
 <br>
