--- a/Preprints.html
+++ b/Preprints.html
@@ -50,7 +50,7 @@ Selected Publications
 
 </br>
 </br>
-<li> S. Datta and J. Oldroyd, <a href = "ArXiv-SDJO-LCUNTF.pdf"> <i> Low coherence unit norm tight frames</i></a>, <a href = "https://www.tandfonline.com/doi/full/10.1080/03081087.2018.1450348?scroll=top&needAccess=true"> Linear and Multilinear Algebra</a>, Vol. 67, Issue 6, pp. 1174 - 1189, 2019. 
+<li> S. Datta and J. Oldroyd, <a href = "Arxiv-SDJO-LCUNTF.pdf"> <i> Low coherence unit norm tight frames</i></a>, <a href = "https://www.tandfonline.com/doi/full/10.1080/03081087.2018.1450348?scroll=top&needAccess=true"> Linear and Multilinear Algebra</a>, Vol. 67, Issue 6, pp. 1174 - 1189, 2019. 
  
 </br>
 </br>
